<resources>
    <string name="app_name">HockeyHub</string>
    <string name="scores_tab">Scores</string>
    <string name="news_tab">News</string>
    <string name="standings_tab">Standings</string>
    <string name="predictions_tab">Predictions</string>
    <string name="profile_tab">Profile</string>
    <string name="profile">Profile</string>
    <string name="article_image">Article Image</string>

    <string name="all_news">All News</string>
    <string name="favourites">Favourites</string>

    <string name="eastern_conference">Eastern Conference</string>
    <string name="western_conference">Western Conference</string>
    <string name="atlantic_division">Atlantic Division</string>
    <string name="metropolitan_division">Metropolitan Division</string>
    <string name="central_division">Central Division</string>
    <string name="pacific_division">Pacific Division</string>
    <string name="team">Team</string>
    <string name="games_played">GP</string>
    <string name="wins">W</string>
    <string name="losses">L</string>
    <string name="over_time_losses">OTL</string>
    <string name="points">PTS</string>
    <string name="team_logo">Team Logo</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="select_fav_teams">Select Favourite Teams</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="not_logged_in">Not logged in. To log in, click the profile tab.</string>
    <string name="delete_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="password_change_successful">Password Changed Successfully</string>
    <string name="incorrect_old_password">Incorrect Old Password</string>
    <string name="account_delete_successful">Account Deleted Successfully</string>
    <string name="please_fill_all_fields">Please fill in all the fields</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="username_already_taken">Username already taken. Please choose a different username.</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>

    <string name="past_scores_button">Past 7 Days</string>
    <string name="select_date_scores_button">Select Date</string>
    <string name="future_schedule_button">Next 7 Days</string>
    <string name="today_schedule_button">Today\'s Games</string>
    <string name="home_label">Home</string>
    <string name="away_label">Away</string>
    <string name="home_team_logo">Home Team Logo</string>
    <string name="away_team_logo">Away Team Logo</string>
    <string name="favourite_teams_scores">Favourite Teams</string>

    <string name="settings">Settings</string>
    <string name="authors">Authors: Jacob Stryker, Ethan Katsiroubas, Muhammad Imran, Chidiebere Chukwuka, David Aschnaki </string>
    <string name="activity_version_num">Activity Version Number: 1.0</string>
    <string name="instructions">Instructions: </string>
    <string name="enable_notifications">Enable News Notifications from Favourite Teams</string>
    <string name="help">Help</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="scores_tab_instructions">Scores Tab: See the NHL games playing today, in the past 7 days, or in the next 7 days. Click the calendar icon to find NHL games in a specific date.</string>
    <string name="news_tab_instructions">News Tab: See all the news going on in the NHL. Select "Favourites" to see NHL news for your favourite teams.</string>
    <string name="standings_tab_instructions">Standings Tab: Displays the eastern conference and western confernece standings. Swipre left and right to navigate between conferences. Scroll down to see the divisions.</string>
    <string name="profile_tab_instructions">
Profile Tab: Type in your username and password and select "Create Account", then "Login" to make an account. Here you can Select your favourite teams so you can see news for only those teams. </string>
    <string name="predictions_tab_instructions">Predictions Tab: Displays the probabilities of what teams gonna win for daily NHL games.</string>
    
    <string name="odds">Odds</string>
    <string name="vs">VS</string>
    <string name="predictions_today">Predictions For Today\'s Games</string>
</resources>
