<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help" />

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:layout_marginTop="16dp" />

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode" />

</LinearLayout>
