<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/filter_favorites_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/favourite_teams_scores" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnPastGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_scores_button"
            android:textSize="12sp"
            android:padding="4dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnTodayGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_schedule_button"
            android:textSize="12sp"
            android:padding="4dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnFutureGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/future_schedule_button"
            android:textSize="12sp"
            android:padding="4dp"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/btnDatePicker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/calendar_image"
            android:contentDescription="@string/select_date_scores_button"
            android:padding="8dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewScores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="48dp" />
</LinearLayout>
